fix(ci): correct Docker image name from smithery2-2api to smithery2api

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
 env:
   REGISTRY: ghcr.io
   # The IMAGE_NAME is derived from the repository name
-  IMAGE_NAME: smithery2api
+  IMAGE_NAME: smithery2-2api
 
 jobs:
   build-and-push-image:
