refactor: restructure project to Express-based architecture with modular routing
- Migrate from native http server to Express.js framework
- Split monolithic server into modular route handlers (admin, chat, models)
- Reorganize services: separate OpenAI mapping, Smithery streaming, and models management
- Implement round-robin cookie rotation with multi-line support in cookies utility
- Replace centralized store with dedicated fileStore utility for JSON persistence
- Simplify SSE parsing and encoding into standalone utility module
- Update Dockerfile to use new entry point (src/index.js)
- Remove deprecated cookie pool management and complex logging system
- Streamline admin UI to focus on core cookie and model management
- Move configuration to config/config.json with simplified logger

--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
-  "name": "smai",
-  "version": "2.0.0",
-  "description": "Smithery API proxy with cookie pool management",
-  "main": "server.js",
+  "name": "smai-proxy",
+  "version": "1.0.0",
+  "description": "OpenAI-compatible proxy to smithery.ai with JSON storage and multi-cookie rotation",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js",
-    "build": "echo 'No build step required'"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.17"
   },
-  "files": [
-    "src/**/*",
-    "server.js",
-    "config.json",
-    "public/**/*"
-  ],
-  "dependencies": {},
-  "keywords": [
-    "api",
-    "proxy",
-    "smithery",
-    "openai",
-    "cookie-management"
-  ],
-  "author": "",
-  "license": "MIT"
+  "dependencies": {
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
+
