--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
 env:
   REGISTRY: ghcr.io
   # The IMAGE_NAME is derived from the repository name
-  IMAGE_NAME: ${{ github.repository_owner }}/smithery2api
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-image:
