--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,9 @@
 {
-  "port": 8787,
+  "port": 3000,
   "debug": false,
   "heartbeatMs": 15000,
   "flushIntervalMs": 40,
-  "autoResumeMax": 1,
-  "dataDir": "./data"
+  "autoResumeMaxAttempts": 1,
+  "dataDir": "data"
 }
+
