ci(workflow): hardcode Docker image name to smithery2api
Replace dynamic repository name with explicit repository owner and image name to ensure consistent Docker image naming across workflow runs.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
 env:
   REGISTRY: ghcr.io
   # The IMAGE_NAME is derived from the repository name
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository_owner }}/smithery2api
 
 jobs:
   build-and-push-image:
